# calx-vm

./: .gitignore  Cargo.toml  README.md  try.sh
.github/workflows/: publish.yaml  test.yaml
benches/: demo_benchmarks.rs  optimization_benchmarks.rs  simple_benchmarks.rs  vm_benchmarks.rs
demos/: assert.cirru  fibo-if.cirru  fibonacci.cirru  if.cirru  named.cirru  nested.cirru  recur.cirru  sum.cirru
examples/: demo.cirru  fibo.rs  hello.cirru  main.rs  sum.cirru
src/: calx.rs  cirru.rs  lib.rs  parser.rs  primes.rs  syntax.rs  util.rs  vm.rs
src/calx/: types.rs
src/parser/: locals.rs
src/vm/: block_data.rs  frame.rs  func.rs  instr.rs
tests/: parser_tests.rs
