[package]
name = "calx_vm"
version = "0.2.0"
authors = ["jiyinyiyong <jiyinyiyong@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Stack-based VM, with dynamic data, for experiment"
homepage = "https://github.com/calcit-lang/calx-vm"
documentation = "https://docs.rs/crate/calx_vm/"
repository = "https://github.com/calcit-lang/calx-vm.rs"
readme = "README.md"
exclude = []

[[bin]]
name = "calx"
path = "src/bin/cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cirru_parser = "0.1.26"
regex = "1.10.2"
lazy_static = "1.4.0"
clap = { version = "4.4.18", features = ["derive"] }
bincode = "2.0.0-rc.3"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[profile.release]
debug = true
