[package]
name = "calx_vm"
version = "0.2.0"
authors = ["jiyinyiyong <jiyinyiyong@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Stack-based VM, with dynamic data, for experiment"
homepage = "https://github.com/calcit-lang/calx-vm"
documentation = "https://docs.rs/crate/calx_vm/"
repository = "https://github.com/calcit-lang/calx-vm.rs"
readme = "README.md"
exclude = []

[[bin]]
name = "calx"
path = "src/bin/cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cirru_parser = "0.1.31"
regex = "1.10.5"
lazy_static = "1.5.0"
bincode = "2.0.0-rc.3"
argh = "0.1.12"

# [target.'cfg(not(target_env = "msvc"))'.dependencies]
# tikv-jemallocator = "0.5"

[profile.release]
debug = true
